--- a/src/features/postsList/post/post.scss
+++ b/src/features/postsList/post/post.scss
@@ -9,7 +9,6 @@
   box-shadow: 0px 5px 7px 0px rgba(0, 0, 0, 0.24);
 }
 .post_header {
-  width: 100%;
   border-bottom: 1px solid whitesmoke;
   text-align: center;
   h3 {
@@ -18,11 +17,11 @@
 }
 
 .post_img {
-  display: flex;
-  justify-content: center;
   border-bottom: 1px solid whitesmoke;
   img {
+    width: 100%;
     object-fit: contain;
+    height: 300px;
   }
 }
 .post_footer {
